@@ -1,3 +1,10 @@
+2011-09-07  Diego Elio Pettenò <flameeyes@flameeyes.eu>
+
+	* bmc-watchdog/src/bmc-watchdog.c: By writing a pidfile, init
+	scripts can rely on that to kill or signal the running daemon
+	instance. This is important because relying on the process name
+	can be troublesome when using Linux Containers, for instance.
+
 2011-09-06  Diego Elio Pettenò <flameeyes@flameeyes.eu>
 
 	* libfreeipmi/src/Makefile.am: The -module option is used to tell
